docs/envoy/v1.23.7/_sources/api-v3/config/trace/v3/opentelemetry.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/trace/v3/opentelemetry.proto:

OpenTelemetry tracer (proto)
============================




.. _envoy_v3_api_msg_config.trace.v3.OpenTelemetryConfig:

config.trace.v3.OpenTelemetryConfig
-----------------------------------

:repo:`[config.trace.v3.OpenTelemetryConfig proto] <api/envoy/config/trace/v3/opentelemetry.proto#L19>`

Configuration for the OpenTelemetry tracer.
 

.. _extension_envoy.tracers.opentelemetry:

This extension has the qualified name ``envoy.tracers.opentelemetry``

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension has an unknown security posture and should only be
  used in deployments where both the downstream and upstream are
  trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.tracers <extension_category_envoy.tracers>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig <envoy_v3_api_msg_config.trace.v3.OpenTelemetryConfig>`



.. code-block:: json
  :force:

  {
    "grpc_service": {...}
  }

.. _envoy_v3_api_field_config.trace.v3.OpenTelemetryConfig.grpc_service:

grpc_service
  (:ref:`config.core.v3.GrpcService <envoy_v3_api_msg_config.core.v3.GrpcService>`, *REQUIRED*) The upstream gRPC cluster that will receive OTLP traces.
  Note that the tracer drops traces if the server does not read data fast enough.
  
  

